Fix minimap overflow in small screens

--- a/css/style-module-frontpage.css
+++ b/css/style-module-frontpage.css
@@ -101,3 +101,11 @@
     font-size: 1em;
   }
 }
+
+/********************
+ * SECTION: Contact *
+ ********************/
+
+#minimap img {
+  max-width: 100%;
+}
